# master

./: .gitignore  CMakeLists.txt  README.md
docs/thesis/Cap0/: abstract.tex  agradecimentos.tex  listaabreviaturas.tex  listasimbolos.tex  resumo.tex
docs/thesis/Cap1/: cap1.tex
docs/thesis/Cap2/: cap2.tex
docs/thesis/Cap3/: cap3.tex
docs/thesis/Cap4/: cap4.tex
docs/thesis/Cap5/: cap5.tex
docs/thesis/Cap6/: cap6.tex
docs/thesis/Referencias/: bibfile.bib  referencias.bib
include/: DVector.h  Dict.h  Dummies.h  Edge.h  Element.h  Field.h  Ghost.h  Helpers.h  Mesh.h  Node.h  Numericals.h  Pipeline.h  Poly.h  Posproc.h  Preproc.h  Property.h  SD.h  Solver.h  Time.h  Weights.h
resources/: mesh_test.geo  mesh_test.msh
src/: Element.cpp  Field.cpp  Ghost.cpp  Main.cpp  Mesh.cpp  Node.cpp  Pipeline.cpp  Poly.cpp  Preproc.cpp  SD.cpp  Solver.cpp  Time.cpp  Utils.cpp  Weights.cpp  main2.cpp  ringleb.cpp
src/cases/airfoil/: airfoil.cpp
src/cases/cylinder/: cylinder.cpp
src/cases/implosion/: implosion.cpp
src/cases/overset/cylinder/: cylinder.cpp
src/cases/overset/vortex/: vortex.cpp
src/cases/ringleb/: ringleb.cpp
src/cases/vortex/: vortex.cpp
tests/: main.cpp  test_dict.cpp  test_dvector.cpp  test_element.cpp  test_functional.cpp  test_helpers.cpp  test_mesh.cpp  test_pipeline.cpp  test_posproc.cpp  test_sd.cpp  test_solver.cpp  test_ublas.cpp  tests.cpp
